# llm-class-final-project

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/: 2024-01 (week 3).md  2024-02 (week 7).md  2024-03 (week 11).md  2024-04 (week 15).md  2024-05 (week 19).md  2024-06 (week 23).md  2024-07 (week 27).md  2024-08 (week 31).md  2024-09 (week 35).md  2024-10 (week 39).md  2024-11 (week 43).md  2024-12 (week 47).md  2025-01 (week 1).md  2025-02 (week 5).md  2025-03 (week 9).md  2025-04 (week 13).md  2025-05 (week 17).md  2025-06 (week 21).md  2025-07 (week 25).md  2025-08 (week 29).md
iac/: alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  variables.tf  vpc.tf
src/: evaluator.py  llm.py  main.py
src/rag/: database.py  parser.py
tests/: test_evaluator.py
tests/rag/: test_parser.py
