[project]
name = "llm-class-final-project"
version = "1.0.0"
description = "Final Project for the LLM Class"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "iterator-chain>=1.1.0",
    "langchain-ollama>=0.3.8",
    "langchain-pinecone>=0.2.12",
    "langchain-text-splitters>=0.3.11",
    "pinecone>=7.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
